--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@actions/github": "^5.0.3",
+    "@biomejs/biome": "1.4.1",
     "@tauri-apps/cli": "^1.3.1",
     "@types/fs-extra": "^9.0.13",
     "@types/js-cookie": "^3.0.2",
@@ -64,11 +65,5 @@
     "vite": "^3.2.5",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^2.2.1"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": false,
-    "endOfLine": "lf"
   }
 }
